<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/footerRoot"
    android:background="#FFFFFF"
    android:elevation="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="14dp"
    android:paddingEnd="14dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context=".FooterFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/nav_one"
        android:textSize="13sp"
        app:backgroundTint="#0D47EC"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/nav_two"
        android:textSize="13sp"
        app:backgroundTint="#F57C00"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/nav_three"
        android:textSize="13sp"
        app:backgroundTint="#8B5CF6"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>